Update from https://github.com/babsballetschool/website/commit/dcc5621c6cc0b751f0aa22f496b9b2a67ad30751

--- a/index.html
+++ b/index.html
@@ -40,19 +40,20 @@ Wil je dit zelf ervaren? Kom vrijblijvend een proefles doen. Stuur een mail voor
 <p> Rooster seizoen 25/26 
 <img src="resources/image/algemeen/balletklok.jpg" alt="dansrooster 2025-2026 bij Babs Balletschool"> <iframe width="100%" height="830px" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vShF9QZbzqdBX1DwUQt7uIn9LxF8yweI4VsvrOrb3roSnKl87zY4YpYFR7b0MnEGFycEXP7QUxEP8kx/pubhtml?gid=1911534545&amp;single=true&amp;widget=true&amp;headers=false"></iframe></p>
 </section><section><h1 id="inschrijven-voor-seizoen-25-26">Inschrijven voor seizoen 25-26:</h1>
-<p><a href="https://docs.google.com/forms/d/e/1FAIpQLScKKMDE3qj1KcmIxWGIdN7Re943kAck9iCVdcWpYOsYjp8lLA/viewform?usp=sf_link">Inschrijfformulier</a></p>
+<p><img src="resources/image/algemeen/pencil.jpg" alt="Inschrijven Babs Balletschool"> 
+<a href="https://docs.google.com/forms/d/e/1FAIpQLScKKMDE3qj1KcmIxWGIdN7Re943kAck9iCVdcWpYOsYjp8lLA/viewform?usp=sf_link">Inschrijfformulier</a></p>
 </section><section><h1 id="peuterdans">Peuterdans</h1>
 <p><img src="resources/image/algemeen/peuterdans.3.jpg" alt="Peuterdans bij Babs Balletschool"> 
 vanaf 29 september starten we weer een nieuwe cursus Peuterdans. Kom dansen met je kindje of kleinkindje en ervaar samen dansplezier! 
-Cursus duurt 11 weken. (m.u.v. schoolvakanties). Mail: <a href="mailto:&#x62;&#97;&#x62;&#115;&#64;&#x62;&#x61;&#x62;&#115;&#98;&#97;&#x6c;&#108;&#101;&#x74;&#115;&#x63;&#104;&#111;&#111;&#x6c;&#46;&#110;&#x6c;">&#x62;&#97;&#x62;&#115;&#64;&#x62;&#x61;&#x62;&#115;&#98;&#97;&#x6c;&#108;&#101;&#x74;&#115;&#x63;&#104;&#111;&#111;&#x6c;&#46;&#110;&#x6c;</a></p>
+Cursus duurt 11 weken. (m.u.v. schoolvakanties). Mail: <a href="mailto:&#98;&#x61;&#98;&#115;&#64;&#98;&#97;&#x62;&#x73;&#x62;&#97;&#x6c;&#108;&#x65;&#116;&#x73;&#x63;&#x68;&#x6f;&#111;&#108;&#x2e;&#x6e;&#108;">&#98;&#x61;&#98;&#115;&#64;&#98;&#97;&#x62;&#x73;&#x62;&#97;&#x6c;&#108;&#x65;&#116;&#x73;&#x63;&#x68;&#x6f;&#111;&#108;&#x2e;&#x6e;&#108;</a></p>
 </section><section><h1 id="ballet-volwassenen-intermediate">Ballet Volwassenen Intermediate</h1>
 <p><img src="resources/image/Sprong.png" alt="dansplezier bij Babs Balletschool"> 
 Op maandagochtend starten we een nieuwe les ballet voor volwassenen,  dit is een les voor dansers met al eerdere balletervaring. 
-Aanmelden kan via de mail: <a href="mailto:&#98;&#x61;&#98;&#x73;&#x40;&#x62;&#97;&#98;&#x73;&#x62;&#97;&#108;&#x6c;&#x65;&#116;&#115;&#x63;&#x68;&#111;&#111;&#108;&#x2e;&#x6e;&#108;">&#98;&#x61;&#98;&#x73;&#x40;&#x62;&#97;&#98;&#x73;&#x62;&#97;&#108;&#x6c;&#x65;&#116;&#115;&#x63;&#x68;&#111;&#111;&#108;&#x2e;&#x6e;&#108;</a></p>
+Aanmelden kan via de mail: <a href="mailto:&#98;&#x61;&#98;&#115;&#x40;&#x62;&#97;&#x62;&#x73;&#x62;&#97;&#x6c;&#108;&#101;&#116;&#x73;&#99;&#x68;&#111;&#111;&#108;&#46;&#110;&#x6c;">&#98;&#x61;&#98;&#115;&#x40;&#x62;&#97;&#x62;&#x73;&#x62;&#97;&#x6c;&#108;&#101;&#116;&#x73;&#99;&#x68;&#111;&#111;&#108;&#46;&#110;&#x6c;</a></p>
 </section><section><h1 id="ballet-beginners-14">Ballet beginners 14+</h1>
 <p><img src="resources/image/algemeen/KLassiekballettieners.jpg" alt="Ballet tieners bij Babs Balletschool"> 
 Voor dansers die altijd al ballet hebben willen leren, of hun danstechniek willen versterken met een klassieke basis. 
-Proefles is gratis. Aanmelden proefles via de mail: <a href="mailto:&#x62;&#97;&#98;&#x73;&#x40;&#98;&#97;&#98;&#115;&#98;&#x61;&#108;&#x6c;&#x65;&#116;&#x73;&#x63;&#104;&#x6f;&#x6f;&#x6c;&#x2e;&#110;&#108;">&#x62;&#97;&#98;&#x73;&#x40;&#98;&#97;&#98;&#115;&#98;&#x61;&#108;&#x6c;&#x65;&#116;&#x73;&#x63;&#104;&#x6f;&#x6f;&#x6c;&#x2e;&#110;&#108;</a> </p>
+Proefles is gratis. Aanmelden proefles via de mail: <a href="mailto:&#98;&#x61;&#x62;&#115;&#x40;&#x62;&#97;&#x62;&#115;&#98;&#x61;&#x6c;&#x6c;&#101;&#x74;&#115;&#x63;&#x68;&#x6f;&#x6f;&#x6c;&#x2e;&#x6e;&#108;">&#98;&#x61;&#x62;&#115;&#x40;&#x62;&#97;&#x62;&#115;&#98;&#x61;&#x6c;&#x6c;&#101;&#x74;&#115;&#x63;&#x68;&#x6f;&#x6f;&#x6c;&#x2e;&#x6e;&#108;</a> </p>
 </section><section><h1 id="pilates-op-mat">Pilates op mat</h1>
 <p><img src="resources/image/algemeen/Pilates.JPG" alt="Pilates bij Babs Balletschool"> 
 Pilates bestaat uit een serie oefeningen die je op een mat kunt uitvoeren.
