--- a/index.html
+++ b/index.html
@@ -35,36 +35,27 @@
             <div class="where"><span>home</span></div>
             <section><h1 id="dansplezier">Dansplezier</h1>
 <p>Plezier in dansen is er voor groot en klein. Wij delen de liefde voor dans met jullie. <img src="resources/image/algemeen/kinderballet%20(2).JPG" alt="dansplezier bij Babs Balletschool"> 
-Wil je dit zelf ervaren? Kom vrijblijvend een proefles doen. Stuur een mail voor het aanvragen van een proefles <a href="mailto:babs@babsballetschool.nl">contact</a></p>
-</section><section><h1 id="dansrooster--jaarplanning">Dansrooster &amp; jaarplanning</h1>
-<p> Rooster seizoen 25/26 
-<img src="resources/image/algemeen/balletklok.jpg" alt="dansrooster 2025-2026 bij Babs Balletschool"> <iframe width="100%" height="830px" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vShF9QZbzqdBX1DwUQt7uIn9LxF8yweI4VsvrOrb3roSnKl87zY4YpYFR7b0MnEGFycEXP7QUxEP8kx/pubhtml?gid=1911534545&amp;single=true&amp;widget=true&amp;headers=false"></iframe></p>
+Wil je dit zelf ervaren? Instromen is zeker nog mogelijk. Kom vrijblijvend een proefles doen. Stuur een mail voor het aanvragen van een proefles <a href="mailto:babs@babsballetschool.nl">contact</a></p>
 </section><section><h1 id="inschrijven-voor-seizoen-25-26">Inschrijven voor seizoen 25-26:</h1>
 <p><img src="resources/image/algemeen/pencil.jpg" alt="Inschrijven Babs Balletschool"> 
 <a href="https://docs.google.com/forms/d/e/1FAIpQLScKKMDE3qj1KcmIxWGIdN7Re943kAck9iCVdcWpYOsYjp8lLA/viewform?usp=sf_link">Inschrijfformulier</a></p>
 </section><section><h1 id="peuterdans">Peuterdans</h1>
 <p><img src="resources/image/algemeen/peuterdans.3.jpg" alt="Peuterdans bij Babs Balletschool"> 
 vanaf 29 september starten we weer een nieuwe cursus Peuterdans. Kom dansen met je kindje of kleinkindje en ervaar samen dansplezier! 
-Cursus duurt 11 weken. (m.u.v. schoolvakanties). Mail: <a href="mailto:&#98;&#97;&#98;&#115;&#x40;&#98;&#97;&#98;&#x73;&#x62;&#97;&#108;&#x6c;&#x65;&#x74;&#115;&#99;&#104;&#x6f;&#111;&#108;&#46;&#x6e;&#x6c;">&#98;&#97;&#98;&#115;&#x40;&#98;&#97;&#98;&#x73;&#x62;&#97;&#108;&#x6c;&#x65;&#x74;&#115;&#99;&#104;&#x6f;&#111;&#108;&#46;&#x6e;&#x6c;</a></p>
+Cursus duurt 11 weken. (m.u.v. schoolvakanties). Mail: <a href="mailto:&#x62;&#x61;&#98;&#115;&#x40;&#x62;&#x61;&#x62;&#x73;&#98;&#x61;&#108;&#108;&#x65;&#116;&#115;&#x63;&#104;&#111;&#111;&#108;&#46;&#x6e;&#108;">&#x62;&#x61;&#98;&#115;&#x40;&#x62;&#x61;&#x62;&#x73;&#98;&#x61;&#108;&#108;&#x65;&#116;&#115;&#x63;&#104;&#111;&#111;&#108;&#46;&#x6e;&#108;</a></p>
 </section><section><h1 id="ballet-volwassenen-intermediate">Ballet Volwassenen Intermediate</h1>
 <p><img src="resources/image/Sprong.png" alt="dansplezier bij Babs Balletschool"> 
-Op maandagochtend starten we een nieuwe les ballet voor volwassenen,  dit is een les voor dansers met al eerdere balletervaring. 
-Aanmelden kan via de mail: <a href="mailto:&#98;&#x61;&#98;&#x73;&#64;&#x62;&#x61;&#98;&#x73;&#98;&#97;&#x6c;&#108;&#x65;&#116;&#115;&#x63;&#x68;&#x6f;&#111;&#x6c;&#x2e;&#x6e;&#108;">&#98;&#x61;&#98;&#x73;&#64;&#x62;&#x61;&#98;&#x73;&#98;&#97;&#x6c;&#108;&#x65;&#116;&#115;&#x63;&#x68;&#x6f;&#111;&#x6c;&#x2e;&#x6e;&#108;</a></p>
+Op maandagochtend is er een nieuwe les ballet voor volwassenen, dit is een les voor dansers die al wat balletervaring hebben. 
+Aanmelden kan via de mail: <a href="mailto:&#x62;&#97;&#98;&#115;&#x40;&#98;&#97;&#98;&#x73;&#98;&#x61;&#x6c;&#x6c;&#101;&#116;&#x73;&#x63;&#104;&#111;&#x6f;&#108;&#46;&#110;&#108;">&#x62;&#97;&#98;&#115;&#x40;&#98;&#97;&#98;&#x73;&#98;&#x61;&#x6c;&#x6c;&#101;&#116;&#x73;&#x63;&#104;&#111;&#x6f;&#108;&#46;&#110;&#108;</a></p>
 </section><section><h1 id="pilates-op-mat">Pilates op mat</h1>
 <p><img src="resources/image/algemeen/Pilates.JPG" alt="Pilates bij Babs Balletschool"> 
 Pilates bestaat uit een serie oefeningen die je op een mat kunt uitvoeren.
 Er zijn ontzettend veel Pilates oefeningen die elk lichaamsdeel kunnen trainen, maar uiteindelijk draait alles om je core (buikspieren). 
 Met Pilates verbeter je jouw kracht, flexibiliteit, houding en balans.
-Schrijf je nu in voor de nieuwe lessen Pilates. (vanaf september 2025). </p>
-</section><section><h1 id="ballet-beginners-14">Ballet beginners 14+</h1>
-<p><img src="resources/image/algemeen/KLassiekballettieners.jpg" alt="Ballet tieners bij Babs Balletschool"> 
-Voor dansers die altijd al ballet hebben willen leren, of hun danstechniek willen versterken met een klassieke basis. 
-Proefles is gratis. Aanmelden proefles via de mail: <a href="mailto:&#x62;&#x61;&#98;&#115;&#x40;&#x62;&#x61;&#x62;&#x73;&#x62;&#97;&#108;&#108;&#101;&#116;&#x73;&#x63;&#104;&#111;&#111;&#108;&#46;&#x6e;&#108;">&#x62;&#x61;&#98;&#115;&#x40;&#x62;&#x61;&#x62;&#x73;&#x62;&#97;&#108;&#108;&#101;&#116;&#x73;&#x63;&#104;&#111;&#111;&#108;&#46;&#x6e;&#108;</a> </p>
-</section><section><h1 id="nieuwe-danskleding">Nieuwe danskleding</h1>
-<p><img src="resources/image/algemeen/Twinkeltje.jpg" alt="Twinkeltje"> 
-Kijk voor je gaat shoppen even naar de kleding voorschriften!
-<a href="https://www.babsballetschool.nl/kleding.html">Kleding</a>
-Half september kom ik weer langs met &#39;Twinkeltje&#39;. Wellicht zit er iets voor je bij.</p>
+Schrijf je nu in voor de nieuwe lessen Pilates.</p>
+</section><section><h1 id="dansrooster--jaarplanning">Dansrooster &amp; jaarplanning</h1>
+<p> Rooster seizoen 25/26 
+<img src="resources/image/algemeen/balletklok.jpg" alt="dansrooster 2025-2026 bij Babs Balletschool"> <iframe width="100%" height="830px" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vShF9QZbzqdBX1DwUQt7uIn9LxF8yweI4VsvrOrb3roSnKl87zY4YpYFR7b0MnEGFycEXP7QUxEP8kx/pubhtml?gid=1911534545&amp;single=true&amp;widget=true&amp;headers=false"></iframe></p>
 </section><section><h1 id="voorstelling-samen">Voorstelling: SAMEN</h1>
 <p><img src="resources/image/algemeen/SAMEN%202025.jpg" alt="dansvoorstelling SAMEN Babs Balletschool">
 Het was een succes en de leerlingen hebben staan stralen! We zijn ontzettend trots. 
