Update from https://github.com/babsballetschool/website/commit/6a7e4aab713b5471469cbb55be714c693af5bbdd

--- a/fotos.html
+++ b/fotos.html
@@ -37,8 +37,9 @@
 <p><strong>Extra!</strong></p>
 <p>Babs Balletschool verzorgt voor haar leerlingen ook presentaties, familiedagen, doe mee-lessen, en voorstellingen zodat zij zich kunnen presenteren aan hun eigen publiek. Deze extraatjes zullen tijdens het seizoen worden aangekondigd.</p>
 </section><section><h1 id="archief">Archief</h1>
-<p>Wilt u graag nog nagenieten van eerdere voorstellingen en presentaties? dat kan. Bestel nu de DVD of de Foto&#39;s van;</p>
+<p>Wilt u graag nog nagenieten van eerdere voorstellingen en presentaties? dat kan. Bestel nu de USB/DVD of de Foto&#39;s van;</p>
 <ul>
+<li>2025 &#39;Samen&#39;</li>
 <li>2023 &#39;Ahoy&#39;</li>
 <li>2019 &#39;Jubileum voorstelling&#39;</li>
 <li>2017 &#39;Diner Dansant&#39;</li>
