--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@ Wil je dit zelf ervaren? Instromen is zeker nog mogelijk. Kom vrijblijvend een p
 </section><section><h1 id="peuterdans">Peuterdans</h1>
 <p><img src="resources/image/algemeen/peuterdans.3.jpg" alt="Peuterdans bij Babs Balletschool"> 
 vanaf 29 september starten we weer een nieuwe cursus Peuterdans. Kom dansen met je kindje of kleinkindje en ervaar samen dansplezier! 
-Cursus duurt 11 weken. (m.u.v. schoolvakanties). Mail: <a href="mailto:&#x62;&#x61;&#98;&#115;&#x40;&#x62;&#x61;&#x62;&#x73;&#98;&#x61;&#108;&#108;&#x65;&#116;&#115;&#x63;&#104;&#111;&#111;&#108;&#46;&#x6e;&#108;">&#x62;&#x61;&#98;&#115;&#x40;&#x62;&#x61;&#x62;&#x73;&#98;&#x61;&#108;&#108;&#x65;&#116;&#115;&#x63;&#104;&#111;&#111;&#108;&#46;&#x6e;&#108;</a></p>
+Cursus duurt 11 weken. (m.u.v. schoolvakanties). Mail: <a href="mailto:&#x62;&#97;&#98;&#x73;&#x40;&#x62;&#97;&#98;&#115;&#x62;&#97;&#108;&#x6c;&#101;&#x74;&#x73;&#x63;&#104;&#111;&#x6f;&#x6c;&#x2e;&#110;&#x6c;">&#x62;&#97;&#98;&#x73;&#x40;&#x62;&#97;&#98;&#115;&#x62;&#97;&#108;&#x6c;&#101;&#x74;&#x73;&#x63;&#104;&#111;&#x6f;&#x6c;&#x2e;&#110;&#x6c;</a></p>
 </section><section><h1 id="ballet-volwassenen-intermediate">Ballet Volwassenen Intermediate</h1>
 <p><img src="resources/image/Sprong.png" alt="dansplezier bij Babs Balletschool"> 
 Op maandagochtend is er een nieuwe les ballet voor volwassenen, dit is een les voor dansers die al wat balletervaring hebben. 
-Aanmelden kan via de mail: <a href="mailto:&#x62;&#97;&#98;&#115;&#x40;&#98;&#97;&#98;&#x73;&#98;&#x61;&#x6c;&#x6c;&#101;&#116;&#x73;&#x63;&#104;&#111;&#x6f;&#108;&#46;&#110;&#108;">&#x62;&#97;&#98;&#115;&#x40;&#98;&#97;&#98;&#x73;&#98;&#x61;&#x6c;&#x6c;&#101;&#116;&#x73;&#x63;&#104;&#111;&#x6f;&#108;&#46;&#110;&#108;</a></p>
+Aanmelden kan via de mail: <a href="mailto:&#98;&#x61;&#x62;&#x73;&#x40;&#x62;&#x61;&#98;&#x73;&#x62;&#x61;&#108;&#108;&#x65;&#x74;&#x73;&#x63;&#x68;&#x6f;&#111;&#108;&#x2e;&#110;&#x6c;">&#98;&#x61;&#x62;&#x73;&#x40;&#x62;&#x61;&#98;&#x73;&#x62;&#x61;&#108;&#108;&#x65;&#x74;&#x73;&#x63;&#x68;&#x6f;&#111;&#108;&#x2e;&#110;&#x6c;</a></p>
 </section><section><h1 id="pilates-op-mat">Pilates op mat</h1>
 <p><img src="resources/image/algemeen/Pilates.JPG" alt="Pilates bij Babs Balletschool"> 
 Pilates bestaat uit een serie oefeningen die je op een mat kunt uitvoeren.
