--- a/jazz.html
+++ b/jazz.html
@@ -39,7 +39,7 @@
 Instromen is zeker nog mogelijk. </p>
 <p><strong>Jazzballet tieners</strong> De Jazzballet lessen voor tieners zijn er op maandag voor 9+ en 12+ en op donderdag voor 15+. 
  De docenten gaan aan de slag met techniek en danscombinaties zodat de dansers zich kunnen uitleven in dans, expressie en energie.</p>
-<p>Vraag een proefles aan via mailto:<a href="mailto:&#x62;&#97;&#x62;&#x73;&#x40;&#98;&#x61;&#98;&#115;&#98;&#97;&#108;&#108;&#x65;&#116;&#x73;&#x63;&#x68;&#x6f;&#x6f;&#x6c;&#46;&#110;&#x6c;">&#x62;&#97;&#x62;&#x73;&#x40;&#98;&#x61;&#98;&#115;&#98;&#97;&#108;&#108;&#x65;&#116;&#x73;&#x63;&#x68;&#x6f;&#x6f;&#x6c;&#46;&#110;&#x6c;</a></p>
+<p>Vraag een proefles aan via mailto:<a href="mailto:&#x62;&#x61;&#98;&#x73;&#64;&#98;&#97;&#98;&#115;&#x62;&#97;&#108;&#108;&#101;&#116;&#x73;&#99;&#x68;&#111;&#111;&#x6c;&#x2e;&#x6e;&#108;">&#x62;&#x61;&#98;&#x73;&#64;&#98;&#97;&#98;&#115;&#x62;&#97;&#108;&#108;&#101;&#116;&#x73;&#99;&#x68;&#111;&#111;&#x6c;&#x2e;&#x6e;&#108;</a></p>
 </section>
         </main>
         <footer>
