Update from https://github.com/babsballetschool/website/commit/f5a170bf495c38200c16390a451d270e82074c4e

--- a/jazz.html
+++ b/jazz.html
@@ -39,7 +39,7 @@
 Instromen is zeker nog mogelijk. </p>
 <p><strong>Jazzballet tieners</strong> De Jazzballet lessen voor tieners zijn er op maandag voor 9+ en 12+ en op donderdag voor 15+. 
  De docenten gaan aan de slag met techniek en danscombinaties zodat de dansers zich kunnen uitleven in dans, expressie en energie.</p>
-<p>Vraag een proefles aan via mailto:<a href="mailto:&#x62;&#x61;&#98;&#x73;&#64;&#98;&#97;&#98;&#115;&#x62;&#97;&#108;&#108;&#101;&#116;&#x73;&#99;&#x68;&#111;&#111;&#x6c;&#x2e;&#x6e;&#108;">&#x62;&#x61;&#98;&#x73;&#64;&#98;&#97;&#98;&#115;&#x62;&#97;&#108;&#108;&#101;&#116;&#x73;&#99;&#x68;&#111;&#111;&#x6c;&#x2e;&#x6e;&#108;</a></p>
+<p>Vraag een proefles aan via mailto:<a href="mailto:&#98;&#97;&#x62;&#115;&#64;&#98;&#97;&#x62;&#x73;&#98;&#x61;&#108;&#x6c;&#101;&#116;&#x73;&#99;&#104;&#111;&#111;&#108;&#x2e;&#x6e;&#108;">&#98;&#97;&#x62;&#115;&#64;&#98;&#97;&#x62;&#x73;&#98;&#x61;&#108;&#x6c;&#101;&#116;&#x73;&#99;&#104;&#111;&#111;&#108;&#x2e;&#x6e;&#108;</a></p>
 </section>
         </main>
         <footer>
