--- a/index.html
+++ b/index.html
@@ -39,14 +39,17 @@ Wil je dit zelf ervaren? Instromen is zeker nog mogelijk. Kom vrijblijvend een p
 </section><section><h1 id="inschrijven-voor-seizoen-25-26">Inschrijven voor seizoen 25-26:</h1>
 <p><img src="resources/image/algemeen/pencil.jpg" alt="Inschrijven Babs Balletschool"> 
 <a href="https://docs.google.com/forms/d/e/1FAIpQLScKKMDE3qj1KcmIxWGIdN7Re943kAck9iCVdcWpYOsYjp8lLA/viewform?usp=sf_link">Inschrijfformulier</a></p>
+</section><section><h1 id="info-brieven">Info brieven:</h1>
+<p><img src="resources/image/algemeen/ballet-krant.jpg" alt="Informatie brieven Babs Balletschool"> 
+De informatie brieven zijn weer verstuurd in September en November. Heb je er een gemist? Stuur mij een mail: <a href="mailto:&#x62;&#97;&#98;&#115;&#x40;&#x62;&#x61;&#x62;&#x73;&#x62;&#x61;&#x6c;&#108;&#101;&#116;&#x73;&#x63;&#x68;&#x6f;&#x6f;&#x6c;&#x2e;&#110;&#108;">&#x62;&#97;&#98;&#115;&#x40;&#x62;&#x61;&#x62;&#x73;&#x62;&#x61;&#x6c;&#108;&#101;&#116;&#x73;&#x63;&#x68;&#x6f;&#x6f;&#x6c;&#x2e;&#110;&#108;</a></p>
 </section><section><h1 id="peuterdans">Peuterdans</h1>
 <p><img src="resources/image/algemeen/peuterdans.3.jpg" alt="Peuterdans bij Babs Balletschool"> 
 vanaf 29 september starten we weer een nieuwe cursus Peuterdans. Kom dansen met je kindje of kleinkindje en ervaar samen dansplezier! 
-Cursus duurt 11 weken. (m.u.v. schoolvakanties). Mail: <a href="mailto:&#x62;&#97;&#98;&#x73;&#x40;&#x62;&#97;&#98;&#115;&#x62;&#97;&#108;&#x6c;&#101;&#x74;&#x73;&#x63;&#104;&#111;&#x6f;&#x6c;&#x2e;&#110;&#x6c;">&#x62;&#97;&#98;&#x73;&#x40;&#x62;&#97;&#98;&#115;&#x62;&#97;&#108;&#x6c;&#101;&#x74;&#x73;&#x63;&#104;&#111;&#x6f;&#x6c;&#x2e;&#110;&#x6c;</a></p>
+Cursus duurt 11 weken. (m.u.v. schoolvakanties). Mail: <a href="mailto:&#x62;&#97;&#98;&#x73;&#64;&#98;&#97;&#98;&#x73;&#98;&#x61;&#108;&#108;&#x65;&#x74;&#115;&#99;&#104;&#111;&#x6f;&#108;&#46;&#110;&#108;">&#x62;&#97;&#98;&#x73;&#64;&#98;&#97;&#98;&#x73;&#98;&#x61;&#108;&#108;&#x65;&#x74;&#115;&#99;&#104;&#111;&#x6f;&#108;&#46;&#110;&#108;</a></p>
 </section><section><h1 id="ballet-volwassenen-intermediate">Ballet Volwassenen Intermediate</h1>
-<p><img src="resources/image/Sprong.png" alt="dansplezier bij Babs Balletschool"> 
+<p><img src="resources/image/Sprong.png" alt="Dansplezier bij Babs Balletschool"> 
 Op maandagochtend is er een nieuwe les ballet voor volwassenen, dit is een les voor dansers die al wat balletervaring hebben. 
-Aanmelden kan via de mail: <a href="mailto:&#98;&#x61;&#x62;&#x73;&#x40;&#x62;&#x61;&#98;&#x73;&#x62;&#x61;&#108;&#108;&#x65;&#x74;&#x73;&#x63;&#x68;&#x6f;&#111;&#108;&#x2e;&#110;&#x6c;">&#98;&#x61;&#x62;&#x73;&#x40;&#x62;&#x61;&#98;&#x73;&#x62;&#x61;&#108;&#108;&#x65;&#x74;&#x73;&#x63;&#x68;&#x6f;&#111;&#108;&#x2e;&#110;&#x6c;</a></p>
+Aanmelden kan via de mail: <a href="mailto:&#98;&#x61;&#x62;&#115;&#64;&#x62;&#97;&#x62;&#x73;&#98;&#97;&#108;&#108;&#x65;&#116;&#x73;&#99;&#x68;&#x6f;&#111;&#108;&#46;&#110;&#x6c;">&#98;&#x61;&#x62;&#115;&#64;&#x62;&#97;&#x62;&#x73;&#98;&#97;&#108;&#108;&#x65;&#116;&#x73;&#99;&#x68;&#x6f;&#111;&#108;&#46;&#110;&#x6c;</a></p>
 </section><section><h1 id="pilates-op-mat">Pilates op mat</h1>
 <p><img src="resources/image/algemeen/Pilates.JPG" alt="Pilates bij Babs Balletschool"> 
 Pilates bestaat uit een serie oefeningen die je op een mat kunt uitvoeren.
@@ -56,10 +59,6 @@ Schrijf je nu in voor de nieuwe lessen Pilates.</p>
 </section><section><h1 id="dansrooster--jaarplanning">Dansrooster &amp; jaarplanning</h1>
 <p> Rooster seizoen 25/26 
 <img src="resources/image/algemeen/balletklok.jpg" alt="dansrooster 2025-2026 bij Babs Balletschool"> <iframe width="100%" height="830px" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vShF9QZbzqdBX1DwUQt7uIn9LxF8yweI4VsvrOrb3roSnKl87zY4YpYFR7b0MnEGFycEXP7QUxEP8kx/pubhtml?gid=1911534545&amp;single=true&amp;widget=true&amp;headers=false"></iframe></p>
-</section><section><h1 id="voorstelling-samen">Voorstelling: SAMEN</h1>
-<p><img src="resources/image/algemeen/SAMEN%202025.jpg" alt="dansvoorstelling SAMEN Babs Balletschool">
-Het was een succes en de leerlingen hebben staan stralen! We zijn ontzettend trots. 
-Nog nagenieten van deze mooie voorstelling? Bestel de usb-film en foto&#39;s via <a href="https://vanessenproducties.nl/product/samen-door-babs-balletschool/">https://vanessenproducties.nl/product/samen-door-babs-balletschool/</a></p>
 </section><section><h1 id="ballet-spelletje-balletris">Ballet Spelletje Balletris</h1>
 <p><img src="resources/image/balletris/babsballetschool-logo.gif" alt="dansplezier bij Babs Balletschool"> 
   Typ deze code in op je toetsenbord:  ⬆⬆⬇⬇⬅➡⬅➡ ba    </p>
