--- a/dansproject.html
+++ b/dansproject.html
@@ -33,8 +33,21 @@
         </header>
         <main class="">
             <div class="where"><span>dansproject</span></div>
-            <section><h1 id="dans-project">Dans Project</h1>
-<p>De dansprojecten op zaterdag zullen in de loop van het seizoen worden aangekondigd. </p>
+            <section><h1 id="dans-projecten-2026">Dans Projecten 2026</h1>
+<p> Het gaat om kort lopende projecten. Vooral boedoeld om leerlingen een extraatje aan te bieden en iets uit te proberen dat zij normaal niet in de les doen. </p>
+<p><strong>Project Modern: Partnering en Floorwork</strong> 
+8 januari t/m 12 februari
+Sarah gaat werken aan samenwerking en lifts binnen de moderne danstechniek. Daarnaast zal zij de vloeroefeningen uitdiepen en uitdagend maken. 
+Dans ervaring is vereist. </p>
+<p>Dit project is vanaf 16 jaar.
+Kosten zijn: € 85,-</p>
+<p>Aanmelden kan via het inschrijfformulier op deze site. </p>
+<p><strong>Project Burlesque</strong>
+26 februari t/m 26 maart
+Eline danst al jaren Burlesque en treed ook op. Zij gaat je uitdagen en ook helpen om je zeker te voelen met jezelf en je bewegingen en je vrouwlijk kant helemaal te laten shinen.</p>
+<p>Dit project is vanaf 18 jaar.
+Kosten zijn: € 85,-</p>
+<p>Aanmelden kan via het inschrijfformulier op deze site. </p>
 </section>
         </main>
         <footer>
