--- a/jazz.html
+++ b/jazz.html
@@ -39,7 +39,7 @@
 Instromen is zeker nog mogelijk. </p>
 <p><strong>Jazzballet tieners</strong> De Jazzballet lessen voor tieners zijn er op maandag voor 9+ en 12+ en op donderdag voor 15+. 
  De docenten gaan aan de slag met techniek en danscombinaties zodat de dansers zich kunnen uitleven in dans, expressie en energie.</p>
-<p>Vraag een proefles aan via mailto:<a href="mailto:&#98;&#97;&#x62;&#115;&#64;&#98;&#x61;&#98;&#x73;&#x62;&#97;&#108;&#x6c;&#x65;&#x74;&#x73;&#99;&#104;&#x6f;&#111;&#108;&#x2e;&#110;&#108;">&#98;&#97;&#x62;&#115;&#64;&#98;&#x61;&#98;&#x73;&#x62;&#97;&#108;&#x6c;&#x65;&#x74;&#x73;&#99;&#104;&#x6f;&#111;&#108;&#x2e;&#110;&#108;</a></p>
+<p>Vraag een proefles aan via mailto:<a href="mailto:&#98;&#97;&#98;&#x73;&#64;&#98;&#97;&#98;&#x73;&#98;&#97;&#108;&#108;&#101;&#x74;&#115;&#x63;&#x68;&#x6f;&#x6f;&#x6c;&#46;&#x6e;&#x6c;">&#98;&#97;&#98;&#x73;&#64;&#98;&#97;&#98;&#x73;&#98;&#97;&#108;&#108;&#101;&#x74;&#115;&#x63;&#x68;&#x6f;&#x6f;&#x6c;&#46;&#x6e;&#x6c;</a></p>
 </section>
         </main>
         <footer>
