Update from https://github.com/babsballetschool/website/commit/399fe097ed80e7c8ee5a8104b51f0adad45f2b76

--- a/index.html
+++ b/index.html
@@ -34,22 +34,29 @@
         <main class="">
             <div class="where"><span>home</span></div>
             <section><h1 id="dansplezier">Dansplezier</h1>
-<p>Plezier in dansen is er voor groot en klein. Wij delen de liefde voor dans met jullie. <img src="resources/image/algemeen/kinderballet%20(2).JPG" alt="dansplezier bij Babs Balletschool"> 
+<p>Plezier in dansen is er voor groot en klein. En heel belangrijk voor je lijf en je geestelijke gezondheid. Dat ook 2026 maar heel dansant mag zijn! Een gelukkig nieuwjaar allemaal. 
+<img src="resources/image/algemeen/newyear.jpg" alt="dansplezier bij Babs Balletschool"> 
 Wil je dit zelf ervaren? Instromen is zeker nog mogelijk. Kom vrijblijvend een proefles doen. Stuur een mail voor het aanvragen van een proefles <a href="mailto:babs@babsballetschool.nl">contact</a></p>
-</section><section><h1 id="inschrijven-voor-seizoen-25-26">Inschrijven voor seizoen 25-26:</h1>
+</section><section><h1 id="inschrijven-voor-een-cursusproject-of-les-dat-kan-hier">Inschrijven voor een cursus/project of les? Dat kan hier.</h1>
 <p><img src="resources/image/algemeen/pencil.jpg" alt="Inschrijven Babs Balletschool"> 
 <a href="https://docs.google.com/forms/d/e/1FAIpQLScKKMDE3qj1KcmIxWGIdN7Re943kAck9iCVdcWpYOsYjp8lLA/viewform?usp=sf_link">Inschrijfformulier</a></p>
 </section><section><h1 id="info-brieven">Info brieven:</h1>
 <p><img src="resources/image/algemeen/ballet-krant.jpg" alt="Informatie brieven Babs Balletschool"> 
-De informatie brieven zijn weer verstuurd in September en November. Heb je er een gemist? Stuur mij een mail: <a href="mailto:&#98;&#97;&#98;&#x73;&#64;&#98;&#97;&#98;&#115;&#x62;&#x61;&#x6c;&#108;&#x65;&#116;&#115;&#x63;&#104;&#111;&#x6f;&#108;&#46;&#x6e;&#108;">&#98;&#97;&#98;&#x73;&#64;&#98;&#97;&#98;&#115;&#x62;&#x61;&#x6c;&#108;&#x65;&#116;&#115;&#x63;&#104;&#111;&#x6f;&#108;&#46;&#x6e;&#108;</a></p>
+De informatie brieven zijn weer verstuurd in September en November. Heb je er een gemist? Stuur mij een mail: <a href="mailto:&#x62;&#x61;&#x62;&#115;&#x40;&#x62;&#97;&#98;&#x73;&#x62;&#x61;&#x6c;&#108;&#x65;&#x74;&#115;&#99;&#104;&#111;&#x6f;&#x6c;&#x2e;&#110;&#x6c;">&#x62;&#x61;&#x62;&#115;&#x40;&#x62;&#97;&#98;&#x73;&#x62;&#x61;&#x6c;&#108;&#x65;&#x74;&#115;&#99;&#104;&#111;&#x6f;&#x6c;&#x2e;&#110;&#x6c;</a></p>
 </section><section><h1 id="peuterdans">Peuterdans</h1>
 <p><img src="resources/image/algemeen/peuterdans.3.jpg" alt="Peuterdans bij Babs Balletschool"> 
-vanaf 29 september starten we weer een nieuwe cursus Peuterdans. Kom dansen met je kindje of kleinkindje en ervaar samen dansplezier! 
-Cursus duurt 11 weken. (m.u.v. schoolvakanties). Mail: <a href="mailto:&#98;&#x61;&#x62;&#x73;&#x40;&#x62;&#97;&#98;&#x73;&#x62;&#x61;&#x6c;&#108;&#x65;&#x74;&#x73;&#x63;&#104;&#x6f;&#111;&#x6c;&#46;&#110;&#x6c;">&#98;&#x61;&#x62;&#x73;&#x40;&#x62;&#97;&#98;&#x73;&#x62;&#x61;&#x6c;&#108;&#x65;&#x74;&#x73;&#x63;&#104;&#x6f;&#111;&#x6c;&#46;&#110;&#x6c;</a></p>
-</section><section><h1 id="ballet-volwassenen-intermediate">Ballet Volwassenen Intermediate</h1>
-<p><img src="resources/image/Sprong.png" alt="Dansplezier bij Babs Balletschool"> 
-Op maandagochtend is er een nieuwe les ballet voor volwassenen, dit is een les voor dansers die al wat balletervaring hebben. 
-Aanmelden kan via de mail: <a href="mailto:&#x62;&#x61;&#98;&#x73;&#64;&#98;&#97;&#x62;&#115;&#98;&#x61;&#108;&#108;&#101;&#x74;&#x73;&#x63;&#104;&#111;&#111;&#108;&#46;&#110;&#x6c;">&#x62;&#x61;&#98;&#x73;&#64;&#98;&#97;&#x62;&#115;&#98;&#x61;&#108;&#108;&#101;&#x74;&#x73;&#x63;&#104;&#111;&#111;&#108;&#46;&#110;&#x6c;</a></p>
+vanaf 12 januari starten we weer een nieuwe cursus Peuterdans. Kom dansen met je kindje of kleinkindje en ervaar samen dansplezier! 
+Cursus duurt 11 weken. (m.u.v. schoolvakanties). Mail: <a href="mailto:&#x62;&#97;&#98;&#115;&#x40;&#x62;&#x61;&#x62;&#x73;&#98;&#x61;&#108;&#x6c;&#101;&#x74;&#x73;&#99;&#x68;&#111;&#111;&#x6c;&#46;&#x6e;&#x6c;">&#x62;&#97;&#98;&#115;&#x40;&#x62;&#x61;&#x62;&#x73;&#98;&#x61;&#108;&#x6c;&#101;&#x74;&#x73;&#99;&#x68;&#111;&#111;&#x6c;&#46;&#x6e;&#x6c;</a></p>
+</section><section><h1 id="dans-projecten-2026">Dans Projecten 2026</h1>
+<p><img src="resources/image/algemeen/modern.jpg" alt="Project bij Babs Balletschool"> 
+ Het gaat om kort lopende projecten. Vooral boedoeld om leerlingen een extraatje aan te bieden en iets uit te proberen dat zij normaal niet in de les doen. </p>
+<p><strong>Project Modern: Partnering en Floorwork</strong> 
+8 januari t/m 12 februari</p>
+<p>Sarah gaat werken aan samenwerking en lifts binnen de moderne danstechniek. Daarnaast zal zij de vloeroefeningen uitdiepen en uitdagend maken. 
+Dans ervaring is vereist. </p>
+<p>Dit project is vanaf 16 jaar.
+Kosten zijn: € 85,-</p>
+<p>Aanmelden kan via het inschrijfformulier op deze site. </p>
 </section><section><h1 id="pilates-op-mat">Pilates op mat</h1>
 <p><img src="resources/image/algemeen/Pilates.JPG" alt="Pilates bij Babs Balletschool"> 
 Pilates bestaat uit een serie oefeningen die je op een mat kunt uitvoeren.
