Update from https://github.com/babsballetschool/website/commit/eb07a739a869f85af0926f6825111ed763f2e479

--- a/dansproject.html
+++ b/dansproject.html
@@ -34,7 +34,8 @@
         <main class="">
             <div class="where"><span>dansproject</span></div>
             <section><h1 id="dans-projecten-2026">Dans Projecten 2026</h1>
-<p> Het gaat om kort lopende projecten. Vooral boedoeld om leerlingen een extraatje aan te bieden en iets uit te proberen dat zij normaal niet in de les doen. </p>
+<p> Het gaat om kort lopende projecten. Vooral boedoeld om leerlingen een extraatje aan te bieden en iets uit te proberen dat zij normaal niet in de les doen. 
+<img src="resources/image/algemeen/modern.jpg" alt="Project bij Babs Balletschool"> </p>
 <p><strong>Project Modern: Partnering en Floorwork</strong> 
 8 januari t/m 12 februari
 Sarah gaat werken aan samenwerking en lifts binnen de moderne danstechniek. Daarnaast zal zij de vloeroefeningen uitdiepen en uitdagend maken. 
