--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@ Wil je dit zelf ervaren? Instromen is zeker nog mogelijk. Kom vrijblijvend een p
 <a href="https://docs.google.com/forms/d/e/1FAIpQLScKKMDE3qj1KcmIxWGIdN7Re943kAck9iCVdcWpYOsYjp8lLA/viewform?usp=sf_link">Inschrijfformulier</a></p>
 </section><section><h1 id="info-brieven">Info brieven:</h1>
 <p><img src="resources/image/algemeen/ballet-krant.jpg" alt="Informatie brieven Babs Balletschool"> 
-De informatie brieven zijn weer verstuurd in September en November. Heb je er een gemist? Stuur mij een mail: <a href="mailto:&#x62;&#x61;&#x62;&#115;&#x40;&#x62;&#97;&#98;&#x73;&#x62;&#x61;&#x6c;&#108;&#x65;&#x74;&#115;&#99;&#104;&#111;&#x6f;&#x6c;&#x2e;&#110;&#x6c;">&#x62;&#x61;&#x62;&#115;&#x40;&#x62;&#97;&#98;&#x73;&#x62;&#x61;&#x6c;&#108;&#x65;&#x74;&#115;&#99;&#104;&#111;&#x6f;&#x6c;&#x2e;&#110;&#x6c;</a></p>
+De informatie brieven zijn weer verstuurd in September en November. Heb je er een gemist? Stuur mij een mail: <a href="mailto:&#x62;&#97;&#98;&#x73;&#x40;&#x62;&#97;&#98;&#x73;&#x62;&#x61;&#108;&#x6c;&#x65;&#116;&#115;&#99;&#104;&#x6f;&#111;&#x6c;&#x2e;&#110;&#x6c;">&#x62;&#97;&#98;&#x73;&#x40;&#x62;&#97;&#98;&#x73;&#x62;&#x61;&#108;&#x6c;&#x65;&#116;&#115;&#99;&#104;&#x6f;&#111;&#x6c;&#x2e;&#110;&#x6c;</a></p>
 </section><section><h1 id="peuterdans">Peuterdans</h1>
 <p><img src="resources/image/algemeen/peuterdans.3.jpg" alt="Peuterdans bij Babs Balletschool"> 
 vanaf 12 januari starten we weer een nieuwe cursus Peuterdans. Kom dansen met je kindje of kleinkindje en ervaar samen dansplezier! 
-Cursus duurt 11 weken. (m.u.v. schoolvakanties). Mail: <a href="mailto:&#x62;&#97;&#98;&#115;&#x40;&#x62;&#x61;&#x62;&#x73;&#98;&#x61;&#108;&#x6c;&#101;&#x74;&#x73;&#99;&#x68;&#111;&#111;&#x6c;&#46;&#x6e;&#x6c;">&#x62;&#97;&#98;&#115;&#x40;&#x62;&#x61;&#x62;&#x73;&#98;&#x61;&#108;&#x6c;&#101;&#x74;&#x73;&#99;&#x68;&#111;&#111;&#x6c;&#46;&#x6e;&#x6c;</a></p>
+Cursus duurt 11 weken. (m.u.v. schoolvakanties). Mail: <a href="mailto:&#x62;&#x61;&#x62;&#x73;&#x40;&#98;&#x61;&#98;&#x73;&#x62;&#97;&#x6c;&#x6c;&#x65;&#x74;&#115;&#x63;&#x68;&#x6f;&#111;&#108;&#46;&#x6e;&#x6c;">&#x62;&#x61;&#x62;&#x73;&#x40;&#98;&#x61;&#98;&#x73;&#x62;&#97;&#x6c;&#x6c;&#x65;&#x74;&#115;&#x63;&#x68;&#x6f;&#111;&#108;&#46;&#x6e;&#x6c;</a></p>
 </section><section><h1 id="dans-projecten-2026">Dans Projecten 2026</h1>
 <p><img src="resources/image/algemeen/modern.jpg" alt="Project bij Babs Balletschool"> 
  Het gaat om kort lopende projecten. Vooral boedoeld om leerlingen een extraatje aan te bieden en iets uit te proberen dat zij normaal niet in de les doen. </p>
