--- a/dansproject.html
+++ b/dansproject.html
@@ -45,7 +45,7 @@ Kosten zijn: € 85,-</p>
 <p>Aanmelden kan via het inschrijfformulier op deze site. </p>
 <p><strong>Project Burlesque</strong></p>
 <p>26 februari t/m 26 maart</p>
-<p>Eline danst al jaren Burlesque en treed ook op. Zij gaat je uitdagen en ook helpen om je zeker te voelen met jezelf en je bewegingen en je vrouwlijk kant helemaal te laten shinen.</p>
+<p>Eline danst al jaren Burlesque en treed zelf ook op. Zij gaat je uitdagen en ook helpen om je zeker te voelen met jezelf en je bewegingen en je vrouwelijke kant helemaal te laten shinen.</p>
 <p>Dit project is vanaf 18 jaar.
 Kosten zijn: € 85,-</p>
 <p>Aanmelden kan via het inschrijfformulier op deze site. </p>
