Update from https://github.com/babsballetschool/website/commit/734bf3cf4ff63efbab1c3c9de4ae2efc64225392

--- a/index.html
+++ b/index.html
@@ -34,27 +34,23 @@
         <main class="">
             <div class="where"><span>home</span></div>
             <section><h1 id="dansplezier">Dansplezier</h1>
-<p>Plezier in dansen is er voor groot en klein. En heel belangrijk voor je lijf en je geestelijke gezondheid. Dat ook 2026 maar heel dansant mag zijn! Een gelukkig nieuwjaar allemaal. 
-<img src="resources/image/algemeen/newyear.jpg" alt="dansplezier bij Babs Balletschool"> 
+<p>Plezier in dansen is er voor groot en klein. En heel belangrijk voor je lijf en je geestelijke gezondheid.
+<img src="resources/image/algemeen/Ballet.JPG" alt="dansplezier bij Babs Balletschool"> 
 Wil je dit zelf ervaren? Instromen is zeker nog mogelijk. Kom vrijblijvend een proefles doen. Stuur een mail voor het aanvragen van een proefles <a href="mailto:babs@babsballetschool.nl">contact</a></p>
 </section><section><h1 id="inschrijven-voor-een-cursusproject-of-les-dat-kan-hier">Inschrijven voor een cursus/project of les? Dat kan hier.</h1>
 <p><img src="resources/image/algemeen/pencil.jpg" alt="Inschrijven Babs Balletschool"> 
 <a href="https://docs.google.com/forms/d/e/1FAIpQLScKKMDE3qj1KcmIxWGIdN7Re943kAck9iCVdcWpYOsYjp8lLA/viewform?usp=sf_link">Inschrijfformulier</a></p>
-</section><section><h1 id="info-brieven">Info brieven:</h1>
-<p><img src="resources/image/algemeen/ballet-krant.jpg" alt="Informatie brieven Babs Balletschool"> 
-De informatie brieven zijn weer verstuurd in September en November. Heb je er een gemist? Stuur mij een mail: <a href="mailto:&#98;&#x61;&#x62;&#115;&#64;&#x62;&#97;&#98;&#115;&#x62;&#x61;&#108;&#x6c;&#x65;&#x74;&#115;&#x63;&#104;&#111;&#111;&#108;&#46;&#110;&#x6c;">&#98;&#x61;&#x62;&#115;&#64;&#x62;&#97;&#98;&#115;&#x62;&#x61;&#108;&#x6c;&#x65;&#x74;&#115;&#x63;&#104;&#111;&#111;&#108;&#46;&#110;&#x6c;</a></p>
 </section><section><h1 id="peuterdans">Peuterdans</h1>
 <p><img src="resources/image/algemeen/peuterdans.3.jpg" alt="Peuterdans bij Babs Balletschool"> 
-vanaf 12 januari starten we weer een nieuwe cursus Peuterdans. Kom dansen met je kindje of kleinkindje en ervaar samen dansplezier! 
-Cursus duurt 11 weken. (m.u.v. schoolvakanties). Mail: <a href="mailto:&#x62;&#97;&#98;&#x73;&#x40;&#x62;&#97;&#x62;&#115;&#98;&#97;&#108;&#x6c;&#101;&#x74;&#x73;&#99;&#x68;&#111;&#x6f;&#x6c;&#x2e;&#110;&#108;">&#x62;&#97;&#98;&#x73;&#x40;&#x62;&#97;&#x62;&#115;&#98;&#97;&#108;&#x6c;&#101;&#x74;&#x73;&#99;&#x68;&#111;&#x6f;&#x6c;&#x2e;&#110;&#108;</a></p>
+Kom dansen met je kindje of kleinkindje en ervaar samen dansplezier! 
+Cursus duurt nog t/m 30 maart (m.u.v. schoolvakanties) Instromen is zeker mogelijk!. Mail: <a href="mailto:&#x62;&#x61;&#98;&#x73;&#64;&#x62;&#97;&#98;&#115;&#x62;&#x61;&#x6c;&#108;&#101;&#116;&#x73;&#99;&#x68;&#111;&#x6f;&#108;&#46;&#x6e;&#108;">&#x62;&#x61;&#98;&#x73;&#64;&#x62;&#97;&#98;&#115;&#x62;&#x61;&#x6c;&#108;&#101;&#116;&#x73;&#99;&#x68;&#111;&#x6f;&#108;&#46;&#x6e;&#108;</a></p>
 </section><section><h1 id="dans-projecten-2026">Dans Projecten 2026</h1>
-<p><img src="resources/image/algemeen/modern.jpg" alt="Project bij Babs Balletschool"> 
- Het gaat om kort lopende projecten. Vooral boedoeld om leerlingen een extraatje aan te bieden en iets uit te proberen dat zij normaal niet in de les doen. </p>
-<p><strong>Project Modern: Partnering en Floorwork</strong> 
-8 januari t/m 12 februari</p>
-<p>Sarah gaat werken aan samenwerking en lifts binnen de moderne danstechniek. Daarnaast zal zij de vloeroefeningen uitdiepen en uitdagend maken. 
-Dans ervaring is vereist. </p>
-<p>Dit project is vanaf 16 jaar.
+<p><img src="resources/image/algemeen/Burlesque%20(Eline).jpg" alt="Project bij Babs Balletschool"> 
+ Het gaat om kort lopende projecten. Vooral bedoeld om leerlingen een extraatje aan te bieden en iets uit te proberen dat zij normaal niet in de les doen, maar ook een leuke kennismaking met onze school voor nieuwe mensen! </p>
+<p>**Project Burlesque ** 
+26 februari t/m 26 maart
+Burlesque is een show/dansstijl die draait om de kunst van het verleiden en het plagen: &quot;The Art of the Tease&quot;. Vaak sensueel, theatraal en stijlvol of juist met veel humor. Heb je zin om je sexy, verleidelijk en krachtig te voelen, en misschien zelfs een beetje buiten je comfortzone te stappen? Doe mee!</p>
+<p>Dit project is vanaf 18 jaar.
 Kosten zijn: € 85,-</p>
 <p>Aanmelden kan via het inschrijfformulier op deze site. </p>
 </section><section><h1 id="pilates-op-mat">Pilates op mat</h1>
@@ -66,13 +62,17 @@ Schrijf je nu in voor de nieuwe lessen Pilates.</p>
 </section><section><h1 id="dansrooster--jaarplanning">Dansrooster &amp; jaarplanning</h1>
 <p> Rooster seizoen 25/26 
 <img src="resources/image/algemeen/balletklok.jpg" alt="dansrooster 2025-2026 bij Babs Balletschool"> <iframe width="100%" height="830px" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vShF9QZbzqdBX1DwUQt7uIn9LxF8yweI4VsvrOrb3roSnKl87zY4YpYFR7b0MnEGFycEXP7QUxEP8kx/pubhtml?gid=1911534545&amp;single=true&amp;widget=true&amp;headers=false"></iframe></p>
+</section><section><h1 id="carnavalsvakantie">Carnavalsvakantie</h1>
+<p><img src="resources/image/algemeen/Carnaval.JPG" alt="Carnaval bij Babs Balletschool"> 
+van 16 t/m 21 februari is het Carnavalsvakantie. Er zijn dan geen lessen. 
+Leutige dagen gewenst! </p>
 </section><section><h1 id="ballet-spelletje-balletris">Ballet Spelletje Balletris</h1>
 <p><img src="resources/image/balletris/babsballetschool-logo.gif" alt="dansplezier bij Babs Balletschool"> 
   Typ deze code in op je toetsenbord:  ⬆⬆⬇⬇⬅➡⬅➡ ba    </p>
 </section><section><h1 id="floor-of-fame">Floor of Fame</h1>
 <p><img src="resources/image/algemeen/floor-of-fame-foto.jpg" alt="Floor of Fame Babs Balletschool"> 
- Onze vloer is een feit met dank aan alle lieve dansers, fans en de sponsor Go Cybersafe.</p>
-<p>*<a href="resources/image/algemeen/Logo-go-cybersafe.png">GoCybersafe</a> </p>
+ Onze vloer is een feit met dank aan alle lieve dansers, fans en de sponsor Go Cybersafe. 
+*<a href="resources/image/algemeen/Logo-go-cybersafe.png">GoCybersafe</a> </p>
 </section>
         </main>
         <footer>
