Update from https://github.com/babsballetschool/website/commit/32548d88718b159080aaf6620621e01492229f2b

--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@ Wil je dit zelf ervaren? Instromen is zeker nog mogelijk. Kom vrijblijvend een p
 </section><section><h1 id="peuterdans">Peuterdans</h1>
 <p><img src="resources/image/algemeen/peuterdans.3.jpg" alt="Peuterdans bij Babs Balletschool"> 
 Kom dansen met je kindje of kleinkindje en ervaar samen dansplezier! 
-Cursus duurt nog t/m 30 maart (m.u.v. schoolvakanties) Instromen is zeker mogelijk!. Mail: <a href="mailto:&#x62;&#x61;&#98;&#x73;&#64;&#x62;&#97;&#98;&#115;&#x62;&#x61;&#x6c;&#108;&#101;&#116;&#x73;&#99;&#x68;&#111;&#x6f;&#108;&#46;&#x6e;&#108;">&#x62;&#x61;&#98;&#x73;&#64;&#x62;&#97;&#98;&#115;&#x62;&#x61;&#x6c;&#108;&#101;&#116;&#x73;&#99;&#x68;&#111;&#x6f;&#108;&#46;&#x6e;&#108;</a></p>
+Cursus duurt nog t/m 30 maart (m.u.v. schoolvakanties) Instromen is zeker mogelijk!. Mail: <a href="mailto:&#x62;&#97;&#98;&#115;&#64;&#98;&#97;&#x62;&#115;&#x62;&#x61;&#108;&#108;&#x65;&#x74;&#115;&#99;&#x68;&#111;&#111;&#x6c;&#46;&#110;&#108;">&#x62;&#97;&#98;&#115;&#64;&#98;&#97;&#x62;&#115;&#x62;&#x61;&#108;&#108;&#x65;&#x74;&#115;&#99;&#x68;&#111;&#111;&#x6c;&#46;&#110;&#108;</a></p>
 </section><section><h1 id="dans-projecten-2026">Dans Projecten 2026</h1>
 <p><img src="resources/image/algemeen/Burlesque%20(Eline).jpg" alt="Project bij Babs Balletschool"> 
  Het gaat om kort lopende projecten. Vooral bedoeld om leerlingen een extraatje aan te bieden en iets uit te proberen dat zij normaal niet in de les doen, maar ook een leuke kennismaking met onze school voor nieuwe mensen! </p>
 <p>**Project Burlesque ** 
-26 februari t/m 26 maart
-Burlesque is een show/dansstijl die draait om de kunst van het verleiden en het plagen: &quot;The Art of the Tease&quot;. Vaak sensueel, theatraal en stijlvol of juist met veel humor. Heb je zin om je sexy, verleidelijk en krachtig te voelen, en misschien zelfs een beetje buiten je comfortzone te stappen? Doe mee!</p>
+26 februari t/m 26 maart</p>
+<p>Burlesque is een show/dansstijl die draait om de kunst van het verleiden en het plagen: &quot;The Art of the Tease&quot;. Vaak sensueel, theatraal en stijlvol of juist met veel humor. Heb je zin om je sexy, verleidelijk en krachtig te voelen, en misschien zelfs een beetje buiten je comfortzone te stappen? Doe mee!</p>
 <p>Dit project is vanaf 18 jaar.
 Kosten zijn: € 85,-</p>
 <p>Aanmelden kan via het inschrijfformulier op deze site. </p>
