--- a/dansproject.html
+++ b/dansproject.html
@@ -34,21 +34,14 @@
         <main class="">
             <div class="where"><span>dansproject</span></div>
             <section><h1 id="dans-projecten-2026">Dans Projecten 2026</h1>
-<p> Het gaat om kort lopende projecten. Vooral boedoeld om leerlingen een extraatje aan te bieden en iets uit te proberen dat zij normaal niet in de les doen. 
-<img src="resources/image/algemeen/modern.jpg" alt="Project bij Babs Balletschool"> </p>
-<p><strong>Project Modern: Partnering en Floorwork</strong> </p>
-<p>8 januari t/m 12 februari</p>
-<p>Sarah gaat werken aan samenwerking en lifts binnen de moderne danstechniek. Daarnaast zal zij de vloeroefeningen uitdiepen en uitdagend maken. 
-Dans ervaring is vereist. </p>
-<p>Dit project is vanaf 16 jaar.
-Kosten zijn: € 85,-</p>
-<p>Aanmelden kan via het inschrijfformulier op deze site. </p>
-<p><strong>Project Burlesque</strong></p>
-<p>26 februari t/m 26 maart</p>
-<p>Eline danst al jaren Burlesque en treed zelf ook op. Zij gaat je uitdagen en ook helpen om je zeker te voelen met jezelf en je bewegingen en je vrouwelijke kant helemaal te laten shinen.</p>
+<p> Het gaat om kort lopende projecten. Vooral bedoeld om leerlingen een extraatje aan te bieden en iets uit te proberen dat zij normaal niet in de les doen, maar ook een leuke kennismaking met onze school voor nieuwe mensen! 
+<img src="resources/image/algemeen/Burlesque%20(Eline).jpg" alt="Project bij Babs Balletschool"> </p>
+<p>**Project Burlesque ** 
+26 februari t/m 26 maart</p>
+<p>Burlesque is een show/dansstijl die draait om de kunst van het verleiden en het plagen: &quot;The Art of the Tease&quot;. Vaak sensueel, theatraal en stijlvol of juist met veel humor. Heb je zin om je sexy, verleidelijk en krachtig te voelen, en misschien zelfs een beetje buiten je comfortzone te stappen? Doe mee!</p>
 <p>Dit project is vanaf 18 jaar.
 Kosten zijn: € 85,-</p>
-<p>Aanmelden kan via het inschrijfformulier op deze site. </p>
+<p>Inschrijven kan via deze site. (home/inschrijven) </p>
 </section>
         </main>
         <footer>
