--- a/jazz.html
+++ b/jazz.html
@@ -39,7 +39,7 @@
 Instromen is zeker nog mogelijk. </p>
 <p><strong>Jazzballet tieners</strong> De Jazzballet lessen voor tieners zijn er op maandag voor 9+ en 12+ en op donderdag voor 15+. 
  De docenten gaan aan de slag met techniek en danscombinaties zodat de dansers zich kunnen uitleven in dans, expressie en energie.</p>
-<p>Vraag een proefles aan via mailto:<a href="mailto:&#98;&#97;&#x62;&#115;&#64;&#98;&#x61;&#98;&#x73;&#x62;&#97;&#x6c;&#108;&#101;&#116;&#115;&#x63;&#104;&#x6f;&#x6f;&#108;&#46;&#110;&#108;">&#98;&#97;&#x62;&#115;&#64;&#98;&#x61;&#98;&#x73;&#x62;&#97;&#x6c;&#108;&#101;&#116;&#115;&#x63;&#104;&#x6f;&#x6f;&#108;&#46;&#110;&#108;</a></p>
+<p>Vraag een proefles aan via mailto:<a href="mailto:&#98;&#x61;&#98;&#115;&#x40;&#x62;&#97;&#x62;&#x73;&#x62;&#x61;&#108;&#x6c;&#x65;&#x74;&#x73;&#x63;&#x68;&#111;&#x6f;&#x6c;&#x2e;&#x6e;&#x6c;">&#98;&#x61;&#98;&#115;&#x40;&#x62;&#97;&#x62;&#x73;&#x62;&#x61;&#108;&#x6c;&#x65;&#x74;&#x73;&#x63;&#x68;&#111;&#x6f;&#x6c;&#x2e;&#x6e;&#x6c;</a></p>
 </section>
         </main>
         <footer>
