Update from https://github.com/babsballetschool/website/commit/572fbed681c5b43299f9bcceefdc4c778a7a0d54

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ Wil je dit zelf ervaren? Instromen is zeker nog mogelijk. Kom vrijblijvend een p
 </section><section><h1 id="peuterdans">Peuterdans</h1>
 <p><img src="resources/image/algemeen/peuterdans.3.jpg" alt="Peuterdans bij Babs Balletschool"> 
 Kom dansen met je kindje of kleinkindje en ervaar samen dansplezier! 
-Cursus duurt nog t/m 30 maart (m.u.v. schoolvakanties) Instromen is zeker mogelijk!. Mail: <a href="mailto:&#98;&#x61;&#x62;&#115;&#64;&#98;&#97;&#x62;&#115;&#98;&#97;&#108;&#x6c;&#x65;&#x74;&#x73;&#x63;&#x68;&#x6f;&#x6f;&#x6c;&#x2e;&#x6e;&#x6c;">&#98;&#x61;&#x62;&#115;&#64;&#98;&#97;&#x62;&#115;&#98;&#97;&#108;&#x6c;&#x65;&#x74;&#x73;&#x63;&#x68;&#x6f;&#x6f;&#x6c;&#x2e;&#x6e;&#x6c;</a></p>
+Cursus duurt nog t/m 30 maart (m.u.v. schoolvakanties) Instromen is zeker mogelijk!. Mail: <a href="mailto:&#x62;&#x61;&#98;&#115;&#x40;&#x62;&#x61;&#x62;&#x73;&#98;&#x61;&#108;&#x6c;&#101;&#x74;&#115;&#99;&#104;&#x6f;&#x6f;&#x6c;&#46;&#x6e;&#x6c;">&#x62;&#x61;&#98;&#115;&#x40;&#x62;&#x61;&#x62;&#x73;&#98;&#x61;&#108;&#x6c;&#101;&#x74;&#115;&#99;&#104;&#x6f;&#x6f;&#x6c;&#46;&#x6e;&#x6c;</a></p>
 </section><section><h1 id="dans-projecten-2026">Dans Projecten 2026</h1>
 <p><img src="resources/image/algemeen/Burlesque%20(Eline).jpg" alt="Project bij Babs Balletschool"> 
  Het gaat om kort lopende projecten. Vooral bedoeld om leerlingen een extraatje aan te bieden en iets uit te proberen dat zij normaal niet in de les doen, maar ook een leuke kennismaking met onze school voor nieuwe mensen! </p>
